--- a/app/views/admin/text_blocks/edit_multiple.html.erb
+++ b/app/views/admin/text_blocks/edit_multiple.html.erb
@@ -85,9 +85,14 @@
         <% ka_block = block_group.detect(&:ka?) %>
         <div id="text-block-<%= ka_block&.id || SecureRandom.uuid %>" class="col-span-1">
           <% if ka_block.present? %>
-            <div class="mr-3 bg-mountbatten-100 px-3 rounded-md ring-2 ring-mountbatten-500" data-controller="tag-term" data-tag-term-url-value="<%= tag_term_admin_text_block_path(id: ka_block.id) %>" data-tag-term-redirect-url-value="<%= edit_multiple_admin_text_blocks_path(collection_id: @collection.id) %>">
+            <div class="mr-3 bg-mountbatten-100 px-3 rounded-md ring-2 ring-mountbatten-500">
 
-              <div class="sm:items-start sm:gap-4 sm:py-3 w-full" data-controller="split-block" data-split-block-url-value="<%= split_admin_text_block_path(id: ka_block.id) %>" data-split-block-redirect-url-value="<%= edit_multiple_admin_text_blocks_path(collection_id: @collection.id) %>">
+              <div
+                  class="sm:items-start sm:gap-4 sm:py-3 w-full"
+                  data-controller="text-block"
+                  data-text-block-split-url-value="<%= split_admin_text_block_path(id: ka_block.id) %>"
+                  data-text-block-tag-url-value="<%= tag_term_admin_text_block_path(id: ka_block.id) %>"
+                  data-text-block-redirect-url-value="<%= edit_multiple_admin_text_blocks_path(collection_id: @collection.id) %>">
                 <div class="mb-2 flex justify-between grid grid-flow-col w-full">
                   <div class="flex items-center">
                     <div class="grid justify-items-start">
@@ -98,7 +103,7 @@
                   </div>
                   <div>
                     <div
-                      data-action="click->tag-term#tag"
+                      data-action="click->text-block#tag"
                       class="grid grid-flow-col space-x-2 items-end">
                       <div class="inline-flex justify-center w-8 bg-gray-50 text-gray-700 rounded-md ring-1 ring-mountbatten-500 p-1 hover:ring-2 hover:ring-oceanside-500 hover:bg-white hover:text-gray-900">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
@@ -106,7 +111,7 @@
                         </svg>
                       </div>
                       <div
-                        data-action="click->split-block#split"
+                        data-action="click->text-block#split"
                         class="inline-flex justify-center w-8 bg-gray-50 text-gray-700 rounded-md ring-1 ring-mountbatten-500 p-1 hover:ring-2 hover:ring-oceanside-500 hover:bg-white hover:text-gray-900">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                           <path stroke-linecap="round" stroke-linejoin="round" d="m7.848 8.25 1.536.887M7.848 8.25a3 3 0 1 1-5.196-3 3 3 0 0 1 5.196 3Zm1.536.887a2.165 2.165 0 0 1 1.083 1.839c.005.351.054.695.14 1.024M9.384 9.137l2.077 1.199M7.848 15.75l1.536-.887m-1.536.887a3 3 0 1 1-5.196 3 3 3 0 0 1 5.196-3Zm1.536-.887a2.165 2.165 0 0 0 1.083-1.838c.005-.352.054-.695.14-1.025m-1.223 2.863 2.077-1.199m0-3.328a4.323 4.323 0 0 1 2.068-1.379l5.325-1.628a4.5 4.5 0 0 1 2.48-.044l.803.215-7.794 4.5m-2.882-1.664A4.33 4.33 0 0 0 10.607 12m3.736 0 7.794 4.5-.802.215a4.5 4.5 0 0 1-2.48-.043l-5.326-1.629a4.324 4.324 0 0 1-2.068-1.379M14.343 12l-2.882 1.664" />
@@ -130,7 +135,7 @@
                     <%= form.text_area :contents,
                                        name: "text_block[contents]",
                                        rows: 8,
-                                       data: { 'split-block-target': 'textarea', 'tag-term-target': 'textarea' },
+                                       data: { 'text-block-target': 'textarea' },
                                        class: "bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-md focus:ring-oceanside-500 focus:border-oceanside-500 block w-full dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-oceanside-500 dark:focus:border-oceanside-500" %>
                   </div>
                   <div class="mt-3 grid w-full justify-items-end">
@@ -168,7 +173,12 @@
           <% if en_block.present? %>
             <div class="ml-3 bg-gray-100 px-3 rounded-md ring-2 ring-gray-500" data-controller="tag-term" data-tag-term-url-value="<%= tag_term_admin_text_block_path(id: en_block.id) %>" data-tag-term-redirect-url-value="<%= edit_multiple_admin_text_blocks_path(collection_id: @collection.id) %>">
 
-              <div class="sm:items-start sm:gap-4 sm:py-3 w-full" data-controller="split-block" data-split-block-url-value="<%= split_admin_text_block_path(id: en_block.id) %>" data-split-block-redirect-url-value="<%= edit_multiple_admin_text_blocks_path(collection_id: @collection.id) %>">
+              <div
+                  class="sm:items-start sm:gap-4 sm:py-3 w-full"
+                  data-controller="text-block"
+                  data-text-block-split-url-value="<%= split_admin_text_block_path(id: en_block.id) %>"
+                  data-text-block-tag-url-value="<%= tag_term_admin_text_block_path(id: en_block.id) %>"
+                  data-text-block-redirect-url-value="<%= edit_multiple_admin_text_blocks_path(collection_id: @collection.id) %>">
                 <div class="mb-2 flex justify-between grid grid-flow-col w-full">
                   <div class="flex items-center">
                     <div class="grid justify-items-start">
@@ -179,7 +189,7 @@
                   </div>
                   <div>
                     <div
-                      data-action="click->tag-term#tag"
+                      data-action="click->text-block#tag"
                       class="grid grid-flow-col space-x-2 items-end">
                       <div class="inline-flex justify-center w-8 bg-gray-50 text-gray-700 rounded-md ring-1 ring-mountbatten-500 p-1 hover:ring-2 hover:ring-oceanside-500 hover:bg-white hover:text-gray-900">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
@@ -187,7 +197,7 @@
                         </svg>
                       </div>
                       <div
-                        data-action="click->split-block#split"
+                        data-action="click->text-block#split"
                         class="inline-flex justify-center w-8 bg-gray-50 text-gray-700 rounded-md ring-1 ring-mountbatten-500 p-1 hover:ring-2 hover:ring-oceanside-500 hover:bg-white hover:text-gray-900">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                           <path stroke-linecap="round" stroke-linejoin="round" d="m7.848 8.25 1.536.887M7.848 8.25a3 3 0 1 1-5.196-3 3 3 0 0 1 5.196 3Zm1.536.887a2.165 2.165 0 0 1 1.083 1.839c.005.351.054.695.14 1.024M9.384 9.137l2.077 1.199M7.848 15.75l1.536-.887m-1.536.887a3 3 0 1 1-5.196 3 3 3 0 0 1 5.196-3Zm1.536-.887a2.165 2.165 0 0 0 1.083-1.838c.005-.352.054-.695.14-1.025m-1.223 2.863 2.077-1.199m0-3.328a4.323 4.323 0 0 1 2.068-1.379l5.325-1.628a4.5 4.5 0 0 1 2.48-.044l.803.215-7.794 4.5m-2.882-1.664A4.33 4.33 0 0 0 10.607 12m3.736 0 7.794 4.5-.802.215a4.5 4.5 0 0 1-2.48-.043l-5.326-1.629a4.324 4.324 0 0 1-2.068-1.379M14.343 12l-2.882 1.664" />
@@ -211,7 +221,7 @@
                     <%= form.text_area :contents,
                                        name: "text_block[contents]",
                                        rows: 8,
-                                       data: { 'split-block-target': 'textarea', 'tag-term-target': 'textarea' },
+                                       data: { 'text-block-target': 'textarea' },
                                        class: "bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-md focus:ring-oceanside-500 focus:border-oceanside-500 block w-full dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-oceanside-500 dark:focus:border-oceanside-500" %>
                   </div>
                   <div class="mt-3 grid w-full justify-items-end">
