--- a/app/views/admin/text_blocks/edit_multiple.html.erb
+++ b/app/views/admin/text_blocks/edit_multiple.html.erb
@@ -90,9 +90,10 @@
               <div
                   class="sm:items-start sm:gap-4 sm:py-3 w-full"
                   data-controller="text-block"
-                  data-text-block-split-url-value="<%= split_admin_text_block_path(id: ka_block.id) %>"
                   data-text-block-tag-url-value="<%= tag_term_admin_text_block_path(id: ka_block.id) %>"
-                  data-text-block-redirect-url-value="<%= edit_multiple_admin_text_blocks_path(collection_id: @collection.id) %>">
+                  data-text-block-split-url-value="<%= split_admin_text_block_path(id: ka_block.id) %>"
+                  data-text-block-update-url-value="<%= admin_text_block_path(id: ka_block.id) %>"
+                  data-text-block-redirect-url-value="<%= edit_multiple_admin_text_blocks_path(collection_id: @collection.id, order_number: order_number) %>">
                 <div class="mb-2 flex justify-between grid grid-flow-col w-full">
                   <div class="flex items-center">
                     <div class="grid justify-items-start">
@@ -120,7 +121,7 @@
                       <button type="button"
                               data-controller="delete-record"
                               data-delete-record-url-value="<%= admin_text_block_path(id: ka_block.id) %>"
-                              data-delete-record-redirect-url-value="<%= edit_multiple_admin_text_blocks_path(collection_id: @collection.id) %>"
+                              data-delete-record-redirect-url-value="<%= edit_multiple_admin_text_blocks_path(collection_id: @collection.id, order_number: order_number) %>"
                               data-action="click->delete-record#submit"
                               class="inline-flex justify-center w-8 bg-gray-50 text-gray-700 rounded-md ring-1 ring-mountbatten-500 p-1 hover:ring-2 hover:ring-oceanside-500 hover:bg-white hover:text-gray-900">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
@@ -130,39 +131,54 @@
                     </div>
                   </div>
                 </div>
-                <%= form_with model: [:admin, ka_block], url: admin_text_block_path(id: ka_block.id), method: :put do |form| %>
-                  <div class="mt-2 sm:mt-0 w-full">
-                    <%= form.text_area :contents,
-                                       name: "text_block[contents]",
-                                       rows: 8,
-                                       data: { 'text-block-target': 'textarea' },
-                                       class: "bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-md focus:ring-oceanside-500 focus:border-oceanside-500 block w-full dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-oceanside-500 dark:focus:border-oceanside-500" %>
-                  </div>
-                  <div class="mt-3 grid w-full justify-items-end">
-                    <button type="submit" class="inline-flex justify-center rounded-md bg-mountbatten-500 ring-2 ring-mountbatten-500 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-mountbatten-400 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-mountbatten-500">შენახვა</button>
-                  </div>
-                <% end %>
+                <div class="mt-2 sm:mt-0 w-full">
+                  <textarea rows="8"
+                            data-text-block-target="textarea"
+                            class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-md focus:ring-oceanside-500 focus:border-oceanside-500 block w-full dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-oceanside-500 dark:focus:border-oceanside-500"
+                            id="ka_text_block_contents"
+                            spellcheck="false"><%= ka_block.contents %></textarea>
+                </div>
+                <div class="mt-3 grid w-full justify-items-end">
+                  <button type="button"
+                          data-action="click->text-block#update"
+                          class="inline-flex justify-center rounded-md bg-mountbatten-500 ring-2 ring-mountbatten-500 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-mountbatten-400 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-mountbatten-500">შენახვა</button>
+                </div>
               </div>
 
             </div>
 
             <div class="mr-3 mt-3 grid grid-flow-col justify-items-end">
               <div class="space-x-2 flex">
-                <%= button_to merge_admin_text_block_path(id: ka_block.id), method: :post, class: "inline-flex justify-center bg-gray-50 text-gray-700 rounded-md ring-1 ring-gray-300 p-1 hover:ring-2 hover:ring-oceanside-500 hover:bg-white hover:text-gray-900" do %>
+                <button type="button"
+                        data-controller="merge-blocks"
+                        data-merge-blocks-url-value="<%= merge_admin_text_block_path(id: ka_block.id) %>"
+                        data-merge-blocks-redirect-url-value="<%= edit_multiple_admin_text_blocks_path(collection_id: @collection.id, order_number: order_number) %>"
+                        data-action="click->merge-blocks#submit"
+                        class="inline-flex justify-center bg-gray-50 text-gray-700 rounded-md ring-1 ring-gray-300 p-1 hover:ring-2 hover:ring-oceanside-500 hover:bg-white hover:text-gray-900">
                   <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                     <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 12c0-1.232-.046-2.453-.138-3.662a4.006 4.006 0 0 0-3.7-3.7 48.678 48.678 0 0 0-7.324 0 4.006 4.006 0 0 0-3.7 3.7c-.017.22-.032.441-.046.662M19.5 12l3-3m-3 3-3-3m-12 3c0 1.232.046 2.453.138 3.662a4.006 4.006 0 0 0 3.7 3.7 48.656 48.656 0 0 0 7.324 0 4.006 4.006 0 0 0 3.7-3.7c.017-.22.032-.441.046-.662M4.5 12l3 3m-3-3-3 3" />
                   </svg>
-                <% end %>
-                <%= button_to swap_admin_text_block_path(id: ka_block.id), method: :post, class: "inline-flex justify-center bg-gray-50 text-gray-700 rounded-md ring-1 ring-gray-300 p-1 hover:ring-2 hover:ring-oceanside-500 hover:bg-white hover:text-gray-900" do %>
+                </button>
+                <button type="button"
+                        data-controller="swap-blocks"
+                        data-swap-blocks-url-value="<%= swap_admin_text_block_path(id: ka_block.id) %>"
+                        data-swap-blocks-redirect-url-value="<%= edit_multiple_admin_text_blocks_path(collection_id: @collection.id, order_number: order_number) %>"
+                        data-action="click->swap-blocks#submit"
+                        class="inline-flex justify-center bg-gray-50 text-gray-700 rounded-md ring-1 ring-gray-300 p-1 hover:ring-2 hover:ring-oceanside-500 hover:bg-white hover:text-gray-900">
                   <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                     <path stroke-linecap="round" stroke-linejoin="round" d="M3 7.5 7.5 3m0 0L12 7.5M7.5 3v13.5m13.5 0L16.5 21m0 0L12 16.5m4.5 4.5V7.5" />
                   </svg>
-                <% end %>
-                <%= button_to admin_text_blocks_path(last_text_block_id: ka_block.id), method: :post, class: "inline-flex justify-center bg-gray-50 text-gray-700 rounded-md ring-1 ring-gray-300 p-1 hover:ring-2 hover:ring-oceanside-500 hover:bg-white hover:text-gray-900" do %>
+                </button>
+                <button type="button"
+                        data-controller="add-block"
+                        data-add-block-url-value="<%= admin_text_blocks_path(last_text_block_id: ka_block.id) %>"
+                        data-add-block-redirect-url-value="<%= edit_multiple_admin_text_blocks_path(collection_id: @collection.id, order_number: order_number) %>"
+                        data-action="click->add-block#submit"
+                        class="inline-flex justify-center bg-gray-50 text-gray-700 rounded-md ring-1 ring-gray-300 p-1 hover:ring-2 hover:ring-oceanside-500 hover:bg-white hover:text-gray-900">
                   <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                     <path stroke-linecap="round" stroke-linejoin="round" d="M12 4.5v15m7.5-7.5h-15" />
                   </svg>
-                <% end %>
+                </button>
               </div>
             </div>
           <% end %>
@@ -178,7 +194,8 @@
                   data-controller="text-block"
                   data-text-block-split-url-value="<%= split_admin_text_block_path(id: en_block.id) %>"
                   data-text-block-tag-url-value="<%= tag_term_admin_text_block_path(id: en_block.id) %>"
-                  data-text-block-redirect-url-value="<%= edit_multiple_admin_text_blocks_path(collection_id: @collection.id) %>">
+                  data-text-block-update-url-value="<%= admin_text_block_path(id: en_block.id) %>"
+                  data-text-block-redirect-url-value="<%= edit_multiple_admin_text_blocks_path(collection_id: @collection.id, order_number: order_number) %>">
                 <div class="mb-2 flex justify-between grid grid-flow-col w-full">
                   <div class="flex items-center">
                     <div class="grid justify-items-start">
@@ -216,38 +233,53 @@
                     </div>
                   </div>
                 </div>
-                <%= form_with model: [:admin, en_block], url: admin_text_block_path(id: en_block.id), method: :put do |form| %>
-                  <div class="mt-2 sm:mt-0 w-full">
-                    <%= form.text_area :contents,
-                                       name: "text_block[contents]",
-                                       rows: 8,
-                                       data: { 'text-block-target': 'textarea' },
-                                       class: "bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-md focus:ring-oceanside-500 focus:border-oceanside-500 block w-full dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-oceanside-500 dark:focus:border-oceanside-500" %>
-                  </div>
-                  <div class="mt-3 grid w-full justify-items-end">
-                    <button type="submit" class="inline-flex justify-center rounded-md bg-mountbatten-500 ring-2 ring-mountbatten-500 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-mountbatten-400 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-mountbatten-500">Save</button>
-                  </div>
-                <% end %>
+                <div class="mt-2 sm:mt-0 w-full">
+                  <textarea rows="8"
+                            data-text-block-target="textarea"
+                            class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-md focus:ring-oceanside-500 focus:border-oceanside-500 block w-full dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-oceanside-500 dark:focus:border-oceanside-500"
+                            id="en_text_block_contents"
+                            spellcheck="false"><%= en_block.contents %></textarea>
+                </div>
+                <div class="mt-3 grid w-full justify-items-end">
+                  <button type="button"
+                          data-action="click->text-block#update"
+                          class="inline-flex justify-center rounded-md bg-mountbatten-500 ring-2 ring-mountbatten-500 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-mountbatten-400 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-mountbatten-500">შენახვა</button>
+                </div>
               </div>
             </div>
 
             <div class="mt-3 grid grid-flow-col justify-items-end">
               <div class="flex space-x-2">
-                <%= button_to merge_admin_text_block_path(id: en_block.id), method: :post, class: "inline-flex justify-center bg-gray-50 text-gray-700 rounded-md ring-1 ring-gray-300 p-1 hover:ring-2 hover:ring-oceanside-500 hover:bg-white hover:text-gray-900" do %>
+                <button type="button"
+                        data-controller="merge-blocks"
+                        data-merge-blocks-url-value="<%= merge_admin_text_block_path(id: en_block.id) %>"
+                        data-merge-blocks-redirect-url-value="<%= edit_multiple_admin_text_blocks_path(collection_id: @collection.id, order_number: order_number) %>"
+                        data-action="click->merge-blocks#submit"
+                        class="inline-flex justify-center bg-gray-50 text-gray-700 rounded-md ring-1 ring-gray-300 p-1 hover:ring-2 hover:ring-oceanside-500 hover:bg-white hover:text-gray-900">
                   <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                     <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 12c0-1.232-.046-2.453-.138-3.662a4.006 4.006 0 0 0-3.7-3.7 48.678 48.678 0 0 0-7.324 0 4.006 4.006 0 0 0-3.7 3.7c-.017.22-.032.441-.046.662M19.5 12l3-3m-3 3-3-3m-12 3c0 1.232.046 2.453.138 3.662a4.006 4.006 0 0 0 3.7 3.7 48.656 48.656 0 0 0 7.324 0 4.006 4.006 0 0 0 3.7-3.7c.017-.22.032-.441.046-.662M4.5 12l3 3m-3-3-3 3" />
                   </svg>
-                <% end %>
-                <%= button_to swap_admin_text_block_path(id: en_block.id), method: :post, class: "inline-flex justify-center bg-gray-50 text-gray-700 rounded-md ring-1 ring-gray-300 p-1 hover:ring-2 hover:ring-oceanside-500 hover:bg-white hover:text-gray-900" do %>
+                </button>
+                <button type="button"
+                        data-controller="swap-blocks"
+                        data-swap-blocks-url-value="<%= swap_admin_text_block_path(id: en_block.id) %>"
+                        data-swap-blocks-redirect-url-value="<%= edit_multiple_admin_text_blocks_path(collection_id: @collection.id, order_number: order_number) %>"
+                        data-action="click->swap-blocks#submit"
+                        class="inline-flex justify-center bg-gray-50 text-gray-700 rounded-md ring-1 ring-gray-300 p-1 hover:ring-2 hover:ring-oceanside-500 hover:bg-white hover:text-gray-900">
                   <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                     <path stroke-linecap="round" stroke-linejoin="round" d="M3 7.5 7.5 3m0 0L12 7.5M7.5 3v13.5m13.5 0L16.5 21m0 0L12 16.5m4.5 4.5V7.5" />
                   </svg>
-                <% end %>
-                <%= button_to admin_text_blocks_path(last_text_block_id: en_block.id), method: :post, class: "inline-flex justify-center bg-gray-50 text-gray-700 rounded-md ring-1 ring-gray-300 p-1 hover:ring-2 hover:ring-oceanside-500 hover:bg-white hover:text-gray-900" do %>
+                </button>
+                <button type="button"
+                        data-controller="add-block"
+                        data-add-block-url-value="<%= admin_text_blocks_path(last_text_block_id: en_block.id) %>"
+                        data-add-block-redirect-url-value="<%= edit_multiple_admin_text_blocks_path(collection_id: @collection.id, order_number: order_number) %>"
+                        data-action="click->add-block#submit"
+                        class="inline-flex justify-center bg-gray-50 text-gray-700 rounded-md ring-1 ring-gray-300 p-1 hover:ring-2 hover:ring-oceanside-500 hover:bg-white hover:text-gray-900">
                   <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                     <path stroke-linecap="round" stroke-linejoin="round" d="M12 4.5v15m7.5-7.5h-15" />
                   </svg>
-                <% end %>
+                </button>
               </div>
             </div>
           <% end %>
